Release 0.3 (in development)
----------------
* added support for python 3.8
* dropped support for python 3.6


Release 0.2
----------------
* customizable headers
* customizable user and password for synchronized


Release 0.1
----------------
* initial release