@@ -2,6 +2,8 @@ Release 0.3 (in development)
 ----------------
 * added support for python 3.8
 * dropped support for python 3.6
+* added requests timeout
+* re-enabled cert verification on api calls to insight
 
 
 Release 0.2
